Fix jumping header links/buttons
Keeping font size the same when hovering fixes jump effects in Firefox. Change vertical spacing to balance header layout.

--- a/client/stylesheets/components.import.less
+++ b/client/stylesheets/components.import.less
@@ -3,6 +3,7 @@
 
 a.button,
 button.btn {
+  background-color: @color-grey065;
   &:not(.btn-inline) {
     min-width: 8em;
     margin: 1em 0;
